--- a/manager/media/style/RevoClassic/style.css
+++ b/manager/media/style/RevoClassic/style.css
@@ -174,7 +174,7 @@ hr {
 }
 
 .split {
-    background: #556476 url(images/misc/line.gif) repeat-x;
+    background: #556476 url(../common/images/misc/line.gif) repeat-x;
     height: 1px;
     font-size: 0;
     clear: both;
@@ -705,7 +705,7 @@ thead td {
 li {
     padding: 0;
     margin: 0;
-    list-style: disc outside url(images/misc/li.gif);
+    list-style: disc outside url(../common/images/misc/li.gif);
 }
 
 ul {
@@ -770,7 +770,7 @@ a img {
 }
 
 div.treeframebody {
-    background: #f5f5f5 url(images/misc/subnav.png) !important;
+    background: #f5f5f5 url(../common/images/misc/subnav.png) !important;
     box-shadow: inset -2px 2px 6px 0px rgba(0, 0, 0, 0.1);
     padding: 8px;
 }
@@ -983,7 +983,7 @@ a.hometblink:hover {
 }
 
 .cntxMnuItem {
-    background-image: url(images/misc/_tx_.gif);
+    background-image: url(../common/images/misc/_tx_.gif);
     cursor: pointer;
     color: var(--color-text-primary);
     padding: 3px 16px 3px 2px;
@@ -1056,7 +1056,7 @@ a.hometblink:hover {
 }
 #topMenu {
     background-color: #23393C;
-    background-image: url("images/misc/headers.jpg");
+    background-image: url("../common/images/misc/headers.jpg");
 }
 #Navcontainer {
     color: #e4f1f3;
@@ -1460,7 +1460,7 @@ a.hometblink, a.hometblink img {
 
 /* -------------------------[ Welcome Page ]--- */
 #mainActionPages {
-    background: #f5f5f5 url(images/misc/mainbg.gif) repeat-x top;
+    background: #f5f5f5 url(../common/images/misc/mainbg.gif) repeat-x top;
 }
 
 .tab-page {
@@ -1855,11 +1855,11 @@ input.DatePicker, #mutate input.DatePicker, #userPane input.DatePicker, #webUser
     width: 150px;
     padding: 3px 3px 3px 24px;
     background-color: #ffffff;
-    background: url(images/misc/datenofocus.gif) no-repeat top left #ffffff;
+    background: url(../common/images/misc/datenofocus.gif) no-repeat top left #ffffff;
 }
 
 input:focus.DatePicker, #mutate input:focus.DatePicker, #userPane input:focus.DatePicker, #webUserPane input:focus.DatePicker, input#datefrom:focus.DatePicker, input#dateto:focus.DatePicker {
-    background: url(images/misc/datefocus.gif) no-repeat top left;
+    background: url(../common/images/misc/datefocus.gif) no-repeat top left;
     cursor: text;
 }
 
