セクションヘッダーとナビゲーションの色を調整し、テーマの視認性を向上

--- a/manager/media/style/AuroraFlow/style.css
+++ b/manager/media/style/AuroraFlow/style.css
@@ -11,16 +11,16 @@ html, body, form, fieldset {
     --color-link-hover: #0f1e76;
     --color-border-default: #ccc;
     --color-surface: #fff;
-    --color-section-header-text: #606060;
+    --color-section-header-text: #e8e8e8;
     --color-section-header-start: #f5f5f5;
     --color-section-header-end: #dddddd;
-    --color-nav-subnav-start: #626262;
-    --color-nav-subnav-end: #444444;
+    --color-nav-subnav-start: #0d2c44;
+    --color-nav-subnav-end: #0a2233;
     --color-primary: #375665;
-    --color-primary-start: #2f8aa1;
-    --color-primary-end: #226b7c;
-    --color-primary-hover-start: #37a3bd;
-    --color-primary-hover-end: #2d879b;
+    --color-primary-start: #0e2f47;
+    --color-primary-end: #0a3f62;
+    --color-primary-hover-start: #124b6f;
+    --color-primary-hover-end: #0d3c58;
     --color-primary-active-start: #1f5a68;
     --color-primary-active-end: #154954;
     --color-secondary-start: #e4e4e4;
