Consolidate SoftSlate top menu styles

--- a/manager/media/style/SoftSlate/style.css
+++ b/manager/media/style/SoftSlate/style.css
@@ -1045,6 +1045,7 @@ a.hometblink:hover {
     --subnav-height: 32px;
     --subnav-horizontal-padding: 16px;
     --topnav-padding-top: 16px;
+    /* Softer dark gray palette */
     --topnav-background: #3d4f5d;
     --topnav-border: #4a5f6f;
     --topnav-link-color: #d4dade;
@@ -1892,59 +1893,3 @@ strong[style*='color:#EF1D1D'] {
     margin-bottom: 8px;
 }
 
-/* -------------------------[ Custom overrides - Option 1 Revised: Softer Dark Gray ]--- */
-
-/* Top navigation background - 柔らかなダークグレー */
-#topMenu {
-    --topnav-background: #3d4f5d;
-    --topnav-border: #4a5f6f;
-    --topnav-link-color: #d4dade;
-    --topnav-link-hover-color: #ffffff;
-    --topnav-link-hover-bg: #4a5f6f;
-    --topnav-link-active-bg: #2f3d48;
-    background-color: #3d4f5d;
-    background-image: none;
-}
-
-#Navcontainer {
-    color: #d4dade;
-}
-
-#nav > li > a {
-    color: #d4dade;
-}
-
-#nav > li > a:hover,
-#nav > li > a:active,
-#nav > li > a:focus-visible {
-    color: #ffffff;
-    background: #4a5f6f;
-    border-color: #4a5f6f;
-}
-
-#nav > li.active > a {
-    background: #2f3d48;
-    border-color: #2f3d48;
-    border-top: 1px solid #4a5f6f;
-    color: #ffffff;
-}
-
-#nav > li > ul.subnav {
-    border-top: 1px solid #4a5f6f;
-    border-bottom: 1px solid #4a5f6f;
-    background: #2f3d48;
-}
-
-#nav > li > ul.subnav a {
-    color: #c1c9ce;
-}
-
-#nav > li > ul.subnav a:hover,
-#nav > li > ul.subnav a:focus-visible {
-    background: #3d4f5d;
-    color: #ffffff;
-}
-
-#nav > li > ul.subnav a:active {
-    color: #7eb3d6;
-}
